chore: update demo

--- a/demo/style.less
+++ b/demo/style.less
@@ -1,10 +1,13 @@
-h2 {
-  text-align: center;
+main {
+  margin: 0 10vw;
+}
+
+section {
+  margin: 50px 0;
 }
 
 .container {
   height: 50vh;
-  margin-bottom: 50px;
   user-select: none;
   font-size: 16px;
   font-family: sans-serif;
